# habit_tracker

./: .coverage  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
config/: celery_app.py  settings.py  urls.py
habits/: apps.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_action_alter_habit_execution_time_and_more.py  0002_initial.py
htmlcov/: index.html
nginx/: Dockerfile  nginx.conf
telegram_bot/: apps.py  signals.py  tasks.py  tests.py  urls.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
